Bug-fix: allow for automatic content fitting in `form-container`
- Prevent error-messages causing `form-container` contents
from overflowing

--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,26 +1,30 @@
 /* Login, Signup, and Logout */
 
 #form-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  width: 100vw;
+  height: fit-content;
 }
 
 #login-form,
 #signup-form {
+  margin: 50px 0 120px 0;
+  height: fit-content;
   position: relative;
   width: 400px;
-  height: 700px;
   text-align: center;
   background: linear-gradient(0deg, rgba(245, 213, 70, 0.1) 0%, rgba(17, 17, 17, 0) 100%);
   border: 1px #ccc solid;
 }
 
 #logout-form {
+  margin: 211px 0px 200px 0px;
+  height: fit-content;
   position: relative;
   width: 400px;
-  height: 311px;
   text-align: center;
   background: linear-gradient(0deg, rgba(245, 213, 70, 0.1) 0%, rgba(17, 17, 17, 0) 100%);
   border: 1px #ccc solid;
@@ -35,17 +39,9 @@
   margin-left: 40px;
 }
 
-#signup-form h2 {
-  margin: 54px 0px 44px 0px;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  line-height: 2.5rem;
-  margin-right: 40px;
-  margin-left: 40px
-}
-
+#signup-form h2,
 #logout-form h2 {
-  margin: 54px 0px 44px 0px;
+  margin: 94px 0px 44px 0px;
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   line-height: 2.5rem;
@@ -64,19 +60,6 @@
   width: 320px;
   outline: none;
   color: #fff;
-}
-
-#form-container > .decorator.top {
-  top: -0.5rem;
-  left: -0.5rem;
-}
-
-#form-container > .decorator.bottom {
-  bottom: -0.5rem;
-}
-
-#form-container > .decorator.right {
-  right: -0.5rem;
 }
 
 #login-form p,
@@ -111,13 +94,14 @@
 
 #logout-form button {
   padding: 20px 128px;
-  margin: 10px 0 20px 0;
+  margin: 20px 0 51px 0;
   z-index: 0;
 }
 
 #end-form {
   display: flex;
   justify-content: center;
+  margin-bottom: 44px;
 }
 
 #end-form a {
@@ -142,4 +126,12 @@
 
 #id_remember:not(:checked) {
   opacity: 0.7;
+}
+
+#login-form ul,
+#signup-form ul {
+  color: #ccc;
+  list-style: none;
+  margin: 60px 30px;
+  text-align: left;
 }
